--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	</script> -->
 	<!--End of Tawk.to Script--> 
 	 <nav class="navbar navbar-expand-lg">
-		<a class="navbar-brand" href="index.html">Seamless <span class="newtitle">Transcription</span></a>
+		<a class="navbar-brand" href="index.html">Moses</a>
 		  <span class="navbar-toggler-icon"></span>
 		</button> 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
