--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://www.momentcrm.com/embed"></script>
-<script>
-  MomentCRM('init', {
-    'teamVanityId': 'caleb1788',
-    'doChat': true,
-    'doTracking': true,
-  });
-</script>
+	<script src="https://www.momentcrm.com/embed"></script>
+	<script>
+	  MomentCRM('init', {
+		'teamVanityId': 'moses',
+		'doChat': true,
+		'doTracking': true,
+	  });
+	</script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
@@ -175,7 +175,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Work Experience</h2>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+            <p>Throughout the years, I have collected gold nuggets from many companies that molded me into the profession I am today.</p>
           </div>
         </div>
     		<div class="row">
@@ -434,9 +434,9 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Court Hearing</span>
 
-						<audio controls autoplay class="audio">
+						<audio controls  class="audio">
 							<!-- <source src="hor" type="audio/ogg"> -->
-							<source src="./images/Audio/Court-Proceeding-Audio.mp3" type="audio/mpeg">
+							<source src="./images/Audio/Court-Proceeding-Audio.mp3" type="audio/mpeg" autoplay="false">
 						  Your browser does not support the audio element.
 						  </audio>
 						  <p class="mt-4">The Transcribed PDF file <a href="./images/Court Hearing Sample.pdf">View PDF</a>.</p>
@@ -449,9 +449,9 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Interview</span>
 
-						<audio controls autoplay class="audio">
+						<audio controls class="audio">
 							<source src="horse.ogg" type="audio/ogg">
-							<source src="./images/Audio/General Transcription audio.mp3" type="audio/mpeg">
+							<source src="./images/Audio/General Transcription audio.mp3" type="audio/mpeg" autoplay="false">
 						  Your browser does not support the audio element.
 						  </audio>
 						  <p class="mt-4">The Transcribed PDF file <a href="./images/General Transcription sample.pdf">View PDF</a>.</p>
@@ -463,9 +463,9 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Dictation</span>
 
-						<audio controls autoplay class="audio">
+						<audio controls class="audio">
 							<source src="horse.ogg" type="audio/ogg">
-							<source src="./images/Audio/Dictation.wav" type="audio/mpeg">
+							<source src="./images/Audio/Dictation.wav" type="audio/mpeg" autoplay="false">
 						  Your browser does not support the audio element.
 						  </audio>
 						  <p class="mt-4">The Transcribed PDF file <a href="./images/Dictation Sample.pdf">View PDF</a>.</p>
@@ -770,7 +770,7 @@
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form  action="https://formspree.io/f/xvoleeek"
+            <form  action="https://formspree.io/f/xnqrqrka"
 			method="POST" class="bg-light p-4 p-md-5 contact-form">
               <div class="form-group">
                 <input type="text" name="Name" class="form-control" placeholder="Your Name">
