--- a/index.html
+++ b/index.html
@@ -881,20 +881,13 @@
 							<p>I am an experienced transcriptionist based in Nairobi, Kenya. My work is focused on
 								producing quality transcripts while putting the client's time and finances into
 								consideration. <a style="color:#ffc107 ;" href="#about-section">Read More!!</a></p>
-							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-4">
-								<li class="ftco-animate"><a href="https://twitter.com/Seamlesstc"><span
-											style="color:#ffc107; ;" class="icon-twitter"></span></a></li>
-								<li class="ftco-animate"><a
-										href="https://www.facebook.com/profile.php?id=100083299843891"><span
-											style="color:#ffc107;" class="icon-facebook"></span></a></li>
-								<li class="ftco-animate"><a
-										href="https://www.instagram.com/seamless_transcriptions/"><span
-											style="color:#ffc107;" class="icon-instagram"></span></a></li>
-								<li class="ftco-animate"><a
-										href="https://www.linkedin.com/in/moses-njuru-12355a21b"><span
-											style="color:#ffc107;" class="icon-linkedin"></span></a></li>
+								<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+									<li class="ftco-animate"><a href="https://twitter.com/Seamlesstc"><span style="color:#ffc107;" class="icon-twitter"></span></a></li>
+									<li class="ftco-animate"><a href="https://www.facebook.com/profile.php?id=100083299843891"><span style="color:#ffc107;"class="icon-facebook"></span></a></li>
+									<li class="ftco-animate"><a href="https://www.instagram.com/seamless_transcriptions/"><span style="color:#ffc107;" class="icon-instagram"></span></a></li>
+									<li class="ftco-animate"><a href="https://www.linkedin.com/in/moses-njuru-12355a21b"><span style="color:#ffc107;" class="icon-linkedin"></span></a></li>
 
-							</ul>
+								  </ul>
 						</div>
 					</div>
 					<div class="col-md">
