--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">November 2020 - Currently</span>
 						<h2>Legal Transcriber for court reporters and attorneys.</h2>
-						<span class="position">Verbit.ai </span>
+						<span class="position">Freelance </span>
 						<p class="mt-4">Using FTR, I transcribe court cases and depositions. I am very fluent in court
 							terminologies and I can adapt to any provided style guide. I also work on interrogations and
 							witness interviews for police departments in both verbatim and non-verbatim. </p>
