--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta charset="utf-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+	<link rel="icon" type="image/x-icon" href="./images/typing.png">
+
 	<script src="https://www.momentcrm.com/embed"></script>
 	<script>
 		MomentCRM('init', {
